# sherlock-qa-advanced-rag

./: .gitignore  README.md  pyproject.toml
agent-ui/: package-lock.json
parser/: chapter_splitter.py
scripts/: base_builder.py  chunker.py  embedding_and_storing.py  generative_connection.py  hyperparam_cache.py  hyperparam_evaluation_rag_triad.py  hyperparam_testing.py  os_app.py  point_format_txt.py  query_db.py  reranker.py
scripts/synthetic_data_generation/: synthetic_data_generation_setup.py  synthetic_data_generation_setup_multihop.py  synthetic_data_generation_test.py  synthetic_data_generation_test_multihop.py  synthetic_test_data_setup.py
